admin tasks given the 'admin' path
